# movie-rater-api

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
movierater/: settings.py
